--- a/templates/admin/admin_inscripciones.html
+++ b/templates/admin/admin_inscripciones.html
@@ -72,7 +72,7 @@
              </select>
  
              <label for="id_pago_insc">Código de Pago</label>
-             <input type="text" name="id_pago_insc" id="id_pago_insc">
+             <input type="text" name="id_pago_insc" id="id_pago_insc" pattern="[0-9]{8}">
  
              <label for="fecha_pago_insc">Fecha de Pago</label>
              <input type="date" name="fecha_pago_insc" id="fecha_pago_insc">
@@ -102,7 +102,7 @@
             </select>
 
              <label for="id_pago_col">Código de Pago</label>
-             <input type="text" name="id_pago_col" id="id_pago_col">
+             <input type="text" name="id_pago_col" id="id_pago_col" pattern="[0-9]{8}">
  
              <label for="fecha_pago_col">Fecha de Pago</label>
              <input type="date" name="fecha_pago_col" id="fecha_pago_col">
