--- a/templates/profesor/profesor_notas.html
+++ b/templates/profesor/profesor_notas.html
@@ -36,7 +36,7 @@
         <input id="nota-anterior-input" disabled style="display: none;"></input>
         <br>
 
-        <button type="submit">Guardar Nota</button>
+        <button type="submit" id="addNoteButton">Guardar Nota</button>
         <a href="/profesor" class="button-link">
             <i class="fa-solid fa-house"></i>
         </a>
