--- a/templates/admin/admin_notas.html
+++ b/templates/admin/admin_notas.html
@@ -51,7 +51,7 @@
         </select>
 
         <label for="notaInput">Nota:</label>
-        <input type="text" id="notaInput"  required>
+        <input type="text" id="notaInput" pattern="(100|[1-9][0-9]?|0)" required >
         <button type="button" id="guardarNota">Guardar Nota</button>
     </form>
 
